fix: Another attempt to get infowindow z-index to work

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,10 @@ body {
 
 @media only screen and (max-width: 500px) {
 
+    .gm-style-iw {
+      z-index: 99999999;
+    }
+
     h2 {
       font-size: 10px;
     }
